# Setup

./: .gitignore  Cargo.toml  README.md  Setup.json  create_debian_package.sh  jsonschema.json
.github/workflows/: rust.yml
deb-packager/DEBIAN/: control
setup-deb/etc/: setup.conf
src/: cli.rs  errors.rs  lib.rs  main.rs  task_executor.rs  util.rs
src/modes/: list_jobs.rs  list_tasks.rs  mod.rs  run.rs  run_job.rs  run_task.rs  validate.rs
src/schema/: job.rs  mod.rs  project.rs  settings.rs  task.rs  task_call.rs
tests/: test.rs
tests/project_file_parsing/: minimal_project_file.json  mod.rs
tests/project_file_parsing/jobs/: mod.rs
tests/project_file_parsing/jobs/json/: correct_jobs.json  missing_task.json
tests/project_file_parsing/settings/: mod.rs
tests/project_file_parsing/settings/json/: complete_settings.json  empty_settings.json  wrong_settings.json
tests/project_file_parsing/tasks/: mod.rs
tests/project_file_parsing/tasks/json/: correct_content_tasks.json  missing_command_task.json
