[package]
name = "setup"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Bindrim"]
description = "Automation and coordination tool for scripts/programs"
repository = "https://github.com/jonasbindrim/Setup"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
jsonschema = "0.18.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
termion = "4.0.0"
